--- a/2_integration/milestone2.ipynb
+++ b/2_integration/milestone2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -21,6 +21,18 @@
       "Requirement already satisfied: setuptools in /usr/lib/python3/dist-packages (from python-levenshtein) (45.2.0)\n",
       "\u001b[33mWARNING: You are using pip version 21.1.1; however, version 22.1.2 is available.\n",
       "You should consider upgrading via the '/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting vega-datasets\n",
+      "  Using cached vega_datasets-0.9.0-py3-none-any.whl (210 kB)\n",
+      "Requirement already satisfied: pandas in /home/b/.local/lib/python3.8/site-packages (from vega-datasets) (1.2.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/lib/python3/dist-packages (from pandas->vega-datasets) (2.7.3)\n",
+      "Requirement already satisfied: numpy>=1.16.5 in /home/b/.local/lib/python3.8/site-packages (from pandas->vega-datasets) (1.20.2)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /usr/lib/python3/dist-packages (from pandas->vega-datasets) (2019.3)\n",
+      "Installing collected packages: vega-datasets\n",
+      "Successfully installed vega-datasets-0.9.0\n",
+      "\u001b[33mWARNING: You are using pip version 21.1.1; however, version 22.1.2 is available.\n",
+      "You should consider upgrading via the '/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -28,6 +40,7 @@
    "source": [
     "%pip install thefuzz\n",
     "%pip install python-levenshtein\n",
+    "%pip install vega-datasets\n",
     "\n",
     "# IMPORTANT always restart from here!\n",
     "import pandas as pd \n",
@@ -3248,7 +3261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -3256,8 +3269,97 @@
     "id": "uAM7BiBRZxA_",
     "outputId": "b84894b5-ef3d-4e7d-d46e-99f830bb8a4a"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div id=\"altair-viz-8dd2f065ed8d4c2f932acfb8c105c9ce\"></div>\n",
+       "<script type=\"text/javascript\">\n",
+       "  (function(spec, embedOpt){\n",
+       "    let outputDiv = document.currentScript.previousElementSibling;\n",
+       "    if (outputDiv.id !== \"altair-viz-8dd2f065ed8d4c2f932acfb8c105c9ce\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-8dd2f065ed8d4c2f932acfb8c105c9ce\");\n",
+       "    }\n",
+       "    const paths = {\n",
+       "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
+       "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
+       "      \"vega-lite\": \"https://cdn.jsdelivr.net/npm//vega-lite@4.8.1?noext\",\n",
+       "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n",
+       "    };\n",
+       "\n",
+       "    function loadScript(lib) {\n",
+       "      return new Promise(function(resolve, reject) {\n",
+       "        var s = document.createElement('script');\n",
+       "        s.src = paths[lib];\n",
+       "        s.async = true;\n",
+       "        s.onload = () => resolve(paths[lib]);\n",
+       "        s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
+       "        document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
+       "      });\n",
+       "    }\n",
+       "\n",
+       "    function showError(err) {\n",
+       "      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n",
+       "      throw err;\n",
+       "    }\n",
+       "\n",
+       "    function displayChart(vegaEmbed) {\n",
+       "      vegaEmbed(outputDiv, spec, embedOpt)\n",
+       "        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n",
+       "    }\n",
+       "\n",
+       "    if(typeof define === \"function\" && define.amd) {\n",
+       "      requirejs.config({paths});\n",
+       "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
+       "    } else if (typeof vegaEmbed === \"function\") {\n",
+       "      displayChart(vegaEmbed);\n",
+       "    } else {\n",
+       "      loadScript(\"vega\")\n",
+       "        .then(() => loadScript(\"vega-lite\"))\n",
+       "        .then(() => loadScript(\"vega-embed\"))\n",
+       "        .catch(showError)\n",
+       "        .then(() => displayChart(vegaEmbed));\n",
+       "    }\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"url\": \"https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/world-110m.json\", \"format\": {\"feature\": \"countries\", \"type\": \"topojson\"}}, \"mark\": {\"type\": \"geoshape\", \"stroke\": \"white\"}, \"encoding\": {\"color\": {\"type\": \"quantitative\", \"field\": \"Value\"}}, \"height\": 400, \"projection\": {\"type\": \"naturalEarth1\"}, \"transform\": [{\"lookup\": \"id\", \"from\": {\"data\": {\"name\": \"data-d751713988987e9331980363e24189ce\"}, \"key\": \"Country\", \"fields\": [\"Value\"]}}], \"width\": 800, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.8.1.json\", \"datasets\": {\"data-d751713988987e9331980363e24189ce\": []}}, {\"mode\": \"vega-lite\"});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "alt.Chart(...)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TODO how do we feed CPI values into this?\n",
+    "# https://altair-viz.github.io/gallery/choropleth.html\n",
+    "# https://groups.google.com/g/vega-js/c/JD3TjOlRbUQ\n",
+    "\n",
+    "import altair as alt\n",
+    "from vega_datasets import data\n",
+    "\n",
+    "#lookupData = wvsSummary.loc[wvsSummary['Variable'] == 'Feeling of happiness'].loc[wvsSummary['Year'] == 2001]\n",
+    "lookupData = cpi_norm.loc[cpi_norm['Year'] == 2001]\n",
+    "source = alt.topo_feature(data.world_110m.url, 'countries')\n",
+    "\n",
+    "alt.Chart(source).mark_geoshape(\n",
+    "    #fill='#666666',\n",
+    "    stroke='white'\n",
+    ").project(\n",
+    "    'naturalEarth1'\n",
+    ").transform_lookup(\n",
+    "    lookup='id',\n",
+    "    from_=alt.LookupData(data=lookupData, key='Country', fields=['Value'])\n",
+    ").encode(\n",
+    "    color='Value:Q'   \n",
+    ").properties(\n",
+    "    width=800,\n",
+    "    height=400\n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3268,10 +3370,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>Variable</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Country, Year, Value, Variable]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cpi2001 = cpi_norm.loc[cpi_norm['Year'] == 2001]\n",
+    "cpi2001\n",
+    "cpi_norm['Year'] == 2001]\n",
+    "#cpi2001.reset_index().rename(columns = {'index': 'Country'})"
+   ]
   },
   {
    "cell_type": "code",
