add CPI worldmap

--- a/2_integration/milestone2.ipynb
+++ b/2_integration/milestone2.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -301,28 +301,28 @@
        "      <th>13</th>\n",
        "      <td>Belarus</td>\n",
        "      <td>1998</td>\n",
-       "      <td>0.39</td>\n",
+       "      <td>0.61</td>\n",
        "      <td>Corruption Perception Index</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>Brazil</td>\n",
        "      <td>1998</td>\n",
-       "      <td>0.40</td>\n",
+       "      <td>0.60</td>\n",
        "      <td>Corruption Perception Index</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36</th>\n",
        "      <td>China</td>\n",
        "      <td>1998</td>\n",
-       "      <td>0.35</td>\n",
+       "      <td>0.65</td>\n",
        "      <td>Corruption Perception Index</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37</th>\n",
        "      <td>Colombia</td>\n",
        "      <td>1998</td>\n",
-       "      <td>0.22</td>\n",
+       "      <td>0.78</td>\n",
        "      <td>Corruption Perception Index</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -336,28 +336,28 @@
        "      <th>3928</th>\n",
        "      <td>Egypt</td>\n",
        "      <td>2015</td>\n",
-       "      <td>0.36</td>\n",
+       "      <td>0.64</td>\n",
        "      <td>Corruption Perception Index</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3941</th>\n",
        "      <td>Germany</td>\n",
        "      <td>2015</td>\n",
-       "      <td>0.81</td>\n",
+       "      <td>0.19</td>\n",
        "      <td>Corruption Perception Index</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4024</th>\n",
        "      <td>Russian Federation</td>\n",
        "      <td>2015</td>\n",
-       "      <td>0.29</td>\n",
+       "      <td>0.71</td>\n",
        "      <td>Corruption Perception Index</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4044</th>\n",
        "      <td>South Africa</td>\n",
        "      <td>2015</td>\n",
-       "      <td>0.44</td>\n",
+       "      <td>0.56</td>\n",
        "      <td>Corruption Perception Index</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -375,21 +375,21 @@
       "text/plain": [
        "                       Country  Year  Value                     Variable\n",
        "2                      Algeria  1998    NaN  Corruption Perception Index\n",
-       "13                     Belarus  1998   0.39  Corruption Perception Index\n",
-       "23                      Brazil  1998   0.40  Corruption Perception Index\n",
-       "36                       China  1998   0.35  Corruption Perception Index\n",
-       "37                    Colombia  1998   0.22  Corruption Perception Index\n",
+       "13                     Belarus  1998   0.61  Corruption Perception Index\n",
+       "23                      Brazil  1998   0.60  Corruption Perception Index\n",
+       "36                       China  1998   0.65  Corruption Perception Index\n",
+       "37                    Colombia  1998   0.78  Corruption Perception Index\n",
        "...                        ...   ...    ...                          ...\n",
-       "3928                     Egypt  2015   0.36  Corruption Perception Index\n",
-       "3941                   Germany  2015   0.81  Corruption Perception Index\n",
-       "4024        Russian Federation  2015   0.29  Corruption Perception Index\n",
-       "4044              South Africa  2015   0.44  Corruption Perception Index\n",
+       "3928                     Egypt  2015   0.64  Corruption Perception Index\n",
+       "3941                   Germany  2015   0.19  Corruption Perception Index\n",
+       "4024        Russian Federation  2015   0.71  Corruption Perception Index\n",
+       "4044              South Africa  2015   0.56  Corruption Perception Index\n",
        "4076  United States of America  2015    NaN  Corruption Perception Index\n",
        "\n",
        "[180 rows x 4 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,8 @@
     "\n",
     "# C) Filter countries and invert values from (1..0) to (0..1) [1 is best]\n",
     "cpi_norm = cpi_norm.loc[cpi_norm['Country'].isin(countriesOfInterest)]\n",
-    "\n",
+    "cpi_norm['Value'] = 1 - cpi_norm['Value']\n",
+    " \n",
     "# D) add constant Variables column\n",
     "cpi_norm['Variable'] = 'Corruption Perception Index'\n",
     "\n",
@@ -3260,26 +3261,186 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 47,
+   "cell_type": "markdown",
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "uAM7BiBRZxA_",
-    "outputId": "b84894b5-ef3d-4e7d-d46e-99f830bb8a4a"
+    "id": "01bvZzqFMnUc"
    },
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>Variable</th>\n",
+       "      <th>country-code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Corruption Perception Index</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Belarus</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Corruption Perception Index</td>\n",
+       "      <td>112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>Corruption Perception Index</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>China</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>Corruption Perception Index</td>\n",
+       "      <td>156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Colombia</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>Corruption Perception Index</td>\n",
+       "      <td>170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Egypt</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>Corruption Perception Index</td>\n",
+       "      <td>818</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>Corruption Perception Index</td>\n",
+       "      <td>276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Russian Federation</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>Corruption Perception Index</td>\n",
+       "      <td>643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>South Africa</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>Corruption Perception Index</td>\n",
+       "      <td>710</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>Corruption Perception Index</td>\n",
+       "      <td>840</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Country  Year  Value                     Variable  \\\n",
+       "0                   Algeria  2001    NaN  Corruption Perception Index   \n",
+       "1                   Belarus  2001    NaN  Corruption Perception Index   \n",
+       "2                    Brazil  2001   0.60  Corruption Perception Index   \n",
+       "3                     China  2001   0.65  Corruption Perception Index   \n",
+       "4                  Colombia  2001   0.62  Corruption Perception Index   \n",
+       "5                     Egypt  2001   0.64  Corruption Perception Index   \n",
+       "6                   Germany  2001   0.26  Corruption Perception Index   \n",
+       "7        Russian Federation  2001   0.77  Corruption Perception Index   \n",
+       "8              South Africa  2001   0.52  Corruption Perception Index   \n",
+       "9  United States of America  2001   0.24  Corruption Perception Index   \n",
+       "\n",
+       "   country-code  \n",
+       "0            12  \n",
+       "1           112  \n",
+       "2            76  \n",
+       "3           156  \n",
+       "4           170  \n",
+       "5           818  \n",
+       "6           276  \n",
+       "7           643  \n",
+       "8           710  \n",
+       "9           840  "
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cpi2001 = cpi_norm.loc[cpi_norm['Year'] == '2001']\n",
+    "cpi2001\n",
+    "\n",
+    "countryCodes_noindex = countryCodes.reset_index().rename(columns={'name': 'Country'})\n",
+    "\n",
+    "lookupData = pd.merge(cpi2001, countryCodes_noindex, on='Country')\n",
+    "lookupData"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-8dd2f065ed8d4c2f932acfb8c105c9ce\"></div>\n",
+       "<div id=\"altair-viz-3e14725ebacf4e449bd63557784dc0d7\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-8dd2f065ed8d4c2f932acfb8c105c9ce\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-8dd2f065ed8d4c2f932acfb8c105c9ce\");\n",
+       "    if (outputDiv.id !== \"altair-viz-3e14725ebacf4e449bd63557784dc0d7\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-3e14725ebacf4e449bd63557784dc0d7\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -3321,14 +3482,14 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"url\": \"https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/world-110m.json\", \"format\": {\"feature\": \"countries\", \"type\": \"topojson\"}}, \"mark\": {\"type\": \"geoshape\", \"stroke\": \"white\"}, \"encoding\": {\"color\": {\"type\": \"quantitative\", \"field\": \"Value\"}}, \"height\": 400, \"projection\": {\"type\": \"naturalEarth1\"}, \"transform\": [{\"lookup\": \"id\", \"from\": {\"data\": {\"name\": \"data-d751713988987e9331980363e24189ce\"}, \"key\": \"Country\", \"fields\": [\"Value\"]}}], \"width\": 800, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.8.1.json\", \"datasets\": {\"data-d751713988987e9331980363e24189ce\": []}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"layer\": [{\"mark\": {\"type\": \"geoshape\", \"fill\": \"#666666\", \"stroke\": \"white\"}}, {\"mark\": {\"type\": \"geoshape\", \"stroke\": \"white\"}, \"encoding\": {\"color\": {\"type\": \"quantitative\", \"field\": \"Value\", \"scale\": {\"scheme\": \"reds\"}}}, \"height\": 400, \"projection\": {\"type\": \"naturalEarth1\"}, \"title\": \"Corruption Perception Worldwide\", \"transform\": [{\"lookup\": \"id\", \"from\": {\"data\": {\"name\": \"data-61610ee411d77b2952cd9a66e06861a2\"}, \"key\": \"country-code\", \"fields\": [\"Value\"]}}], \"width\": 800}], \"data\": {\"url\": \"https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/world-110m.json\", \"format\": {\"feature\": \"countries\", \"type\": \"topojson\"}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.8.1.json\", \"datasets\": {\"data-61610ee411d77b2952cd9a66e06861a2\": [{\"Country\": \"Algeria\", \"Year\": \"2001\", \"Value\": null, \"Variable\": \"Corruption Perception Index\", \"country-code\": 12}, {\"Country\": \"Belarus\", \"Year\": \"2001\", \"Value\": null, \"Variable\": \"Corruption Perception Index\", \"country-code\": 112}, {\"Country\": \"Brazil\", \"Year\": \"2001\", \"Value\": 0.6, \"Variable\": \"Corruption Perception Index\", \"country-code\": 76}, {\"Country\": \"China\", \"Year\": \"2001\", \"Value\": 0.65, \"Variable\": \"Corruption Perception Index\", \"country-code\": 156}, {\"Country\": \"Colombia\", \"Year\": \"2001\", \"Value\": 0.62, \"Variable\": \"Corruption Perception Index\", \"country-code\": 170}, {\"Country\": \"Egypt\", \"Year\": \"2001\", \"Value\": 0.64, \"Variable\": \"Corruption Perception Index\", \"country-code\": 818}, {\"Country\": \"Germany\", \"Year\": \"2001\", \"Value\": 0.26, \"Variable\": \"Corruption Perception Index\", \"country-code\": 276}, {\"Country\": \"Russian Federation\", \"Year\": \"2001\", \"Value\": 0.77, \"Variable\": \"Corruption Perception Index\", \"country-code\": 643}, {\"Country\": \"South Africa\", \"Year\": \"2001\", \"Value\": 0.52, \"Variable\": \"Corruption Perception Index\", \"country-code\": 710}, {\"Country\": \"United States of America\", \"Year\": \"2001\", \"Value\": 0.24, \"Variable\": \"Corruption Perception Index\", \"country-code\": 840}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
-       "alt.Chart(...)"
+       "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3342,93 +3503,27 @@
     "from vega_datasets import data\n",
     "\n",
     "#lookupData = wvsSummary.loc[wvsSummary['Variable'] == 'Feeling of happiness'].loc[wvsSummary['Year'] == 2001]\n",
-    "lookupData = cpi_norm.loc[cpi_norm['Year'] == 2001]\n",
+    "#lookupData = cpi_norm.loc[cpi_norm['Year'] == 2001]\n",
     "source = alt.topo_feature(data.world_110m.url, 'countries')\n",
     "\n",
     "alt.Chart(source).mark_geoshape(\n",
+    "    fill='#666666',\n",
+    "    stroke='white'\n",
+    ") + alt.Chart(source, title='Corruption Perception Worldwide').mark_geoshape(\n",
     "    #fill='#666666',\n",
     "    stroke='white'\n",
     ").project(\n",
     "    'naturalEarth1'\n",
     ").transform_lookup(\n",
     "    lookup='id',\n",
-    "    from_=alt.LookupData(data=lookupData, key='Country', fields=['Value'])\n",
+    "    from_=alt.LookupData(data=lookupData, key='country-code', fields=['Value'])\n",
     ").encode(\n",
-    "    color='Value:Q'   \n",
+    "    color=alt.Color('Value:Q',  scale=alt.Scale(scheme='reds'))\n",
     ").properties(\n",
     "    width=800,\n",
     "    height=400\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "01bvZzqFMnUc"
-   },
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Value</th>\n",
-       "      <th>Variable</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Country, Year, Value, Variable]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cpi2001 = cpi_norm.loc[cpi_norm['Year'] == 2001]\n",
-    "cpi2001\n",
-    "cpi_norm['Year'] == 2001]\n",
-    "#cpi2001.reset_index().rename(columns = {'index': 'Country'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
